[gd_scene load_steps=35 format=3 uid="uid://blqvvu0ytchcd"]

[ext_resource type="Script" uid="uid://si1ikxp52cuk" path="res://actors/pawns/enemies/enemy.gd" id="1_08fpo"]
[ext_resource type="Resource" uid="uid://bfp85p8ebqdan" path="res://actors/pawns/enemies/zombie/basic_zombie.tres" id="2_0qpkc"]
[ext_resource type="Script" uid="uid://bptrhmi4tcomm" path="res://ai/state_machine.gd" id="2_ixsl6"]
[ext_resource type="Script" uid="uid://dt4kadfyw2ywh" path="res://actors/pawns/generic/ai_target.gd" id="4_ymihc"]
[ext_resource type="Script" uid="uid://cskdd0xcjjmfc" path="res://actors/pawns/states/state_wander.gd" id="6_cthrv"]
[ext_resource type="Script" uid="uid://b1vk2g6nxw2g" path="res://actors/pawns/states/state_chase.gd" id="7_qpxon"]
[ext_resource type="Script" uid="uid://gyp8bshfrfoj" path="res://actors/generic/health.gd" id="8_23tyx"]
[ext_resource type="Script" uid="uid://y6xyi4gu5uqa" path="res://actors/pawns/states/state_last_seen.gd" id="8_uotjo"]
[ext_resource type="PackedScene" uid="uid://dfb3edd4wnnag" path="res://actors/pawns/character_sprite.tscn" id="9_culwy"]
[ext_resource type="Script" uid="uid://bdpo0eyqlq8re" path="res://actors/pawns/states/state_attack.gd" id="9_ubgnx"]
[ext_resource type="Script" uid="uid://cjnn80jlwilpx" path="res://actors/pawns/states/state_nexus.gd" id="10_drpw1"]
[ext_resource type="Texture2D" uid="uid://doueacum5bmne" path="res://actors/pawns/sprites/head/head_zombie_1.png" id="10_mmehc"]
[ext_resource type="Texture2D" uid="uid://diqa5jjgkpomp" path="res://actors/pawns/sprites/torso/torso_zombie.png" id="11_eew4g"]
[ext_resource type="Texture2D" uid="uid://bcrncjn0sri3i" path="res://actors/pawns/sprites/hand/hands_zombie_1.png" id="12_b6tq7"]
[ext_resource type="Script" uid="uid://b4wdssttxtlra" path="res://actors/pawns/states/state_break.gd" id="12_sonq4"]
[ext_resource type="Script" uid="uid://c8dnwtjdg5wbq" path="res://audio/footsteps.gd" id="13_mmehc"]
[ext_resource type="Script" uid="uid://b7nergdxei2p6" path="res://actors/pawns/enemies/zombie/zombie_arms.gd" id="18_ubgnx"]
[ext_resource type="Script" uid="uid://kesirm75pc1q" path="res://item/generic/pawn_equipment.gd" id="18_xnimh"]
[ext_resource type="Script" uid="uid://dflsf7ovo0jqw" path="res://item/generic/item_display.gd" id="19_ld5a4"]
[ext_resource type="Script" uid="uid://c816dagnqn6re" path="res://actors/pawns/enemies/zombie/zombie_item.gd" id="20_cthrv"]
[ext_resource type="Resource" uid="uid://6rsgvhonqx4b" path="res://item/items/zombie/zombie_attack.tres" id="21_cthrv"]
[ext_resource type="Script" uid="uid://bnk868k5qp3nb" path="res://actors/pawns/nav_target_provider.gd" id="23_cthrv"]
[ext_resource type="Script" uid="uid://dg8qbly1ndg5w" path="res://actors/pawns/generic/pawn_tracker.gd" id="26_buy8w"]
[ext_resource type="Script" uid="uid://d3o527u2hmgp7" path="res://actors/pawns/generic/defense_tracker.gd" id="26_sonq4"]
[ext_resource type="Script" uid="uid://dbgqumwhqtmf6" path="res://actors/pawns/generic/tile_pathfind.gd" id="27_sonq4"]
[ext_resource type="Resource" uid="uid://b3mx7fnms14x8" path="res://item/loot/loot_table_basic_enemy.tres" id="28_0qpkc"]
[ext_resource type="Script" uid="uid://6x0akmb8ed61" path="res://actors/generic/health_bar.gd" id="28_6lqgw"]
[ext_resource type="Script" uid="uid://donkr7aqvtvk7" path="res://item/loot/loot_dropper.gd" id="28_08fpo"]

[sub_resource type="Shader" id="Shader_0qpkc"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 flash_color: source_color = vec4(1.);
uniform float flash_percentage: hint_range(0.,1.) = 0;

void fragment() {
	vec4 original_color = texture(TEXTURE, UV);
	
	COLOR.rgb = mix(original_color.rgb,flash_color.rgb,flash_percentage);
	COLOR.a = original_color.a;
	
	
	//COLOR.a = original_color.a;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7b2us"]
resource_local_to_scene = true
shader = SubResource("Shader_0qpkc")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_percentage = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3fose"]
size = Vector2(36, 72)

[sub_resource type="CircleShape2D" id="CircleShape2D_roy8y"]
radius = 376.0053

[sub_resource type="CircleShape2D" id="CircleShape2D_jmu02"]
radius = 118.004234

[sub_resource type="CircleShape2D" id="CircleShape2D_buy8w"]
radius = 47.010635

[node name="Zombie" type="CharacterBody2D" node_paths=PackedStringArray("state_machine", "tile_pathfind", "health")]
collision_layer = 4
collision_mask = 32
script = ExtResource("1_08fpo")
enemy_data = ExtResource("2_0qpkc")
state_machine = NodePath("ZombieStateMachine")
tile_pathfind = NodePath("TilePathfind")
faction = 2
health = NodePath("Health")

[node name="CharacterSprite" parent="." node_paths=PackedStringArray("target_supplier", "health") instance=ExtResource("9_culwy")]
material = SubResource("ShaderMaterial_7b2us")
target_supplier = NodePath("../NavTargetProvider")
health = NodePath("../Health")
head_texture = ExtResource("10_mmehc")
torso_texture = ExtResource("11_eew4g")
left_arm_texture = ExtResource("12_b6tq7")
right_arm_texture = ExtResource("12_b6tq7")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="ZombieStateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_ixsl6")
initial_state = NodePath("Nexus")
metadata/_custom_type_script = "uid://bptrhmi4tcomm"

[node name="Wander" type="Node2D" parent="ZombieStateMachine" node_paths=PackedStringArray("player_tracker", "character", "tile_pathfind", "target")]
script = ExtResource("6_cthrv")
player_tracker = NodePath("../../Detectors/PlayerTracker")
character = NodePath("../..")
tile_pathfind = NodePath("../../TilePathfind")
target = NodePath("../../ZombieTarget")

[node name="Chase" type="Node2D" parent="ZombieStateMachine" node_paths=PackedStringArray("enemy", "character", "attack_vision", "obstruction_raycast", "nav", "target")]
script = ExtResource("7_qpxon")
enemy = NodePath("../..")
character = NodePath("../..")
attack_vision = NodePath("../../Areas/AttackArea")
obstruction_raycast = NodePath("../../Raycasts/ObstructionRaycast")
nav = NodePath("../../NavigationAgent2D")
target = NodePath("../../ZombieTarget")

[node name="Last_Seen" type="Node2D" parent="ZombieStateMachine" node_paths=PackedStringArray("character", "player_tracker", "nav", "target")]
script = ExtResource("8_uotjo")
speed = 100
character = NodePath("../..")
player_tracker = NodePath("../../Detectors/PlayerTracker")
nav = NodePath("../../NavigationAgent2D")
target = NodePath("../../ZombieTarget")

[node name="Attack" type="Node2D" parent="ZombieStateMachine" node_paths=PackedStringArray("character", "attack_vision", "equipment", "nav", "ai_target")]
script = ExtResource("9_ubgnx")
character = NodePath("../..")
attack_vision = NodePath("../../Areas/AttackArea")
equipment = NodePath("../../Items/Equipment")
nav = NodePath("../../NavigationAgent2D")
ai_target = NodePath("../../ZombieTarget")

[node name="Nexus" type="Node2D" parent="ZombieStateMachine" node_paths=PackedStringArray("enemy", "tile_pathfind", "player_tracker", "defense_tracker", "ai_target")]
script = ExtResource("10_drpw1")
enemy = NodePath("../..")
tile_pathfind = NodePath("../../TilePathfind")
player_tracker = NodePath("../../Detectors/PlayerTracker")
defense_tracker = NodePath("../../Detectors/DefenseTracker")
ai_target = NodePath("../../ZombieTarget")

[node name="Break" type="Node2D" parent="ZombieStateMachine" node_paths=PackedStringArray("character", "equipment", "nav", "ai_target")]
script = ExtResource("12_sonq4")
character = NodePath("../..")
equipment = NodePath("../../Items/Equipment")
nav = NodePath("../../NavigationAgent2D")
ai_target = NodePath("../../ZombieTarget")

[node name="ZombieTarget" type="Node2D" parent="."]
script = ExtResource("4_ymihc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_3fose")

[node name="Health" type="Node" parent="."]
script = ExtResource("8_23tyx")
metadata/_custom_type_script = "uid://gyp8bshfrfoj"

[node name="Items" type="Node2D" parent="."]

[node name="Equipment" type="Node" parent="Items" node_paths=PackedStringArray("user", "inst_provider", "target_provider", "item_display", "character_sprite")]
script = ExtResource("18_xnimh")
user = NodePath("../..")
inst_provider = NodePath("../ZombieItem")
target_provider = NodePath("../../ZombieTarget")
item_display = NodePath("../ItemDisplay")
character_sprite = NodePath("../../CharacterSprite")
metadata/_custom_type_script = "uid://kesirm75pc1q"

[node name="ItemDisplay" type="Node2D" parent="Items" node_paths=PackedStringArray("user", "instance_supplier", "target_supplier")]
script = ExtResource("19_ld5a4")
user = NodePath("../..")
instance_supplier = NodePath("../ZombieItem")
target_supplier = NodePath("../../NavTargetProvider")
metadata/_custom_type_script = "uid://dflsf7ovo0jqw"

[node name="ZombieItem" type="Node2D" parent="Items"]
script = ExtResource("20_cthrv")
data = ExtResource("21_cthrv")
metadata/_custom_type_script = "uid://c816dagnqn6re"

[node name="ZombieArms" type="Node2D" parent="."]
script = ExtResource("18_ubgnx")

[node name="NavTargetProvider" type="Node2D" parent="." node_paths=PackedStringArray("agent")]
script = ExtResource("23_cthrv")
agent = NodePath("../NavigationAgent2D")
metadata/_custom_type_script = "uid://bnk868k5qp3nb"

[node name="TilePathfind" type="Node2D" parent="." node_paths=PackedStringArray("body")]
script = ExtResource("27_sonq4")
body = NodePath("..")
metadata/_custom_type_script = "uid://dbgqumwhqtmf6"

[node name="Footsteps" type="Node2D" parent="." node_paths=PackedStringArray("character_sprite")]
script = ExtResource("13_mmehc")
character_sprite = NodePath("../CharacterSprite")
metadata/_custom_type_script = "uid://c8dnwtjdg5wbq"

[node name="Detectors" type="Node2D" parent="."]

[node name="PlayerTracker" type="Node2D" parent="Detectors" node_paths=PackedStringArray("pawn_vision", "pawn_raycast")]
script = ExtResource("26_buy8w")
factions_to_track = Array[int]([1])
pawn_vision = NodePath("../../Areas/PlayerVision")
pawn_raycast = NodePath("../../Raycasts/PlayerRaycast")
metadata/_custom_type_script = "uid://dg8qbly1ndg5w"

[node name="DefenseTracker" type="Node2D" parent="Detectors" node_paths=PackedStringArray("defense_vision", "defense_raycast")]
script = ExtResource("26_sonq4")
visibility_level = 1
defense_vision = NodePath("../../Areas/DefenseVision")
defense_raycast = NodePath("../../Raycasts/DefenseRaycast")
metadata/_custom_type_script = "uid://d3o527u2hmgp7"

[node name="Areas" type="Node2D" parent="."]

[node name="PlayerVision" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/PlayerVision"]
shape = SubResource("CircleShape2D_roy8y")
debug_color = Color(0.6269497, 0.5273712, 0.18917459, 0.41960785)

[node name="AttackArea" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/AttackArea"]
shape = SubResource("CircleShape2D_jmu02")
debug_color = Color(0.9304709, 0, 0.20319647, 0.41960785)

[node name="DefenseVision" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/DefenseVision"]
shape = SubResource("CircleShape2D_buy8w")
debug_color = Color(0, 0.55722815, 0.89891285, 0.41960785)

[node name="Raycasts" type="Node2D" parent="."]

[node name="PlayerRaycast" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, 0)
collision_mask = 6

[node name="ObstructionRaycast" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, 0)
collision_mask = 2

[node name="DefenseRaycast" type="RayCast2D" parent="Raycasts"]
collision_mask = 34

[node name="HealthBar" type="Node2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("28_6lqgw")
health = NodePath("../Health")
bar_size = Vector2(60, 15)
offset = Vector2(0, -40)
metadata/_custom_type_script = "uid://6x0akmb8ed61"

[node name="LootDropper" type="Node2D" parent="."]
script = ExtResource("28_08fpo")
loot_table = ExtResource("28_0qpkc")
metadata/_custom_type_script = "uid://donkr7aqvtvk7"

[connection signal="target_acquired" from="ZombieStateMachine/Chase" to="CharacterSprite" method="_move_left_hand"]
[connection signal="target_acquired" from="ZombieStateMachine/Chase" to="CharacterSprite" method="_move_right_hand"]
[connection signal="target_emitted" from="ZombieStateMachine/Chase" to="ZombieArms" method="_set_target"]
[connection signal="target_lost" from="ZombieStateMachine/Chase" to="CharacterSprite" method="_reset_left_hand_pos"]
[connection signal="target_lost" from="ZombieStateMachine/Chase" to="CharacterSprite" method="_reset_right_hand_pos"]
[connection signal="died" from="Health" to="LootDropper" method="drop_loot"]
[connection signal="left_hand_pos_emitted" from="ZombieArms" to="CharacterSprite" method="_set_left_hand_pos"]
[connection signal="right_hand_pos_emitted" from="ZombieArms" to="CharacterSprite" method="_set_right_hand_pos"]
